# bankroll-mafia

./: .gitignore  AGENTS.md  Anchor.toml  PLAN.md  README.md  commitlint.config.cjs  docker-compose.yml  edgecase.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: commitlint.yml
.husky/: install.mjs
apps/api/: .env.example  package.json
apps/api/scripts/: devnet-e2e.ts
apps/api/src/: app.ts  server.ts
apps/api/src/lib/: serialization.ts
apps/api/src/modules/: index.ts
apps/api/src/modules/admin/: index.ts
apps/api/src/modules/auth/: index.test.ts  index.ts  session.ts  store.ts  verify.ts
apps/api/src/modules/economy/: index.test.ts  index.ts
apps/docs/: package.json
apps/docs/app/: page.tsx
apps/web/: .env.example  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: prepare-heist-button.tsx  wallet-connect-button.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx  sonner.tsx  tabs.tsx
apps/web/features/heist-console/: crew-card.tsx  display-config.ts  format.ts  heist-console-header.tsx  heist-console.tsx  heist-slip-card.tsx  job-tier-card.tsx  metric.tsx  outcome-table-card.tsx  target-card.tsx  vault-control-card.tsx
apps/web/lib/api/: auth.ts  client.ts  heists.ts
apps/web/stores/: heist-ui-store.ts
docs/design/: game-loop-mechanics.md  onchain-vault-program.md  system-architecture.md
docs/development/: commit-convention.md  database.md  solana-toolchain.md
programs/bankroll-mafia/: Cargo.toml
programs/bankroll-mafia/src/: lib.rs
(+23 files in other folders)
